Fix the width of the button bar on practice screen by removing extra padding and margin

--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ code {
 
 .icon {
   font-size: inherit !important;
-  padding: 0.5rem;
+  padding: 0.25rem;
 }
 .icon-dropdown {
   font-size: 1.5rem !important;
